--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         touchSensitivity : 5
       });
 
-        $('canvas').css("display","none");
+        /*$('canvas').css("display","none");*/
 
     });
     $(".home-area").ripples({
