여덟번째 커밋

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         /*$('canvas').css("display","none");*/
 
     });
-    $(".home-area").ripples({
+    /*$(".home-area").ripples({
       resolution : 200,
       perturbance : 0.04
-    });
+    });*/
   </script>
 </body>
 </html>
