아홉번째 컴닛

--- a/index.html
+++ b/index.html
@@ -75,11 +75,14 @@
         Write : 물 잔상 효과
         Date : 2019.05.21
         작성자 : 전형동
+        에러 : background-image : none과
+        canvas 발생 canvas는 display none으로 지우는 것으로 해결
+        background-image none은 css로 지우면 이미지가 보이지 않는 현상 발생
       */
-      $('.home-area').ripples({
+      /*$('.home-area').ripples({
         dropRadius : 12,
         perturbance : 0.05
-      });
+      });*/
 
 
       /*
