--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> -->
+
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -30,7 +31,7 @@
   <header class="masthead text-center">
     <div class="masthead-content">
       <div class="container">
-      	<iframe width="1252" height="704" src="https://www.youtube.com/embed/4i7h0uC-m3A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      	<iframe class="html5_main_video" width="1252" height="704" src="https://www.youtube.com/embed/4i7h0uC-m3A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </header>
@@ -49,11 +50,11 @@
             <span class="copy_text" style="color : #010101; margin-bottom: 5px;">
               가끔 어릴 때로 돌아가고 싶은 기분이 들때
             </span>
-            <p class="project-text-1" style="color : #000">
+            <h6 class="project-text-1" style="color : #000">
               효능/효과<br>
               ――――――――<br>
               10대 효과
-            </p>
+            </h6>
             
           </div>
         </div>
@@ -75,11 +76,11 @@
             <span class="copy_text" style="color : #010101; margin-bottom: 5px;">
               얼굴과 마스크가 하나가 되면?
             </span>
-            <p class="project-text-2" style="color : #000">
+            <h6 class="project-text-2" style="color : #000">
               효능/효과<br>
               ――――――――<br>
               10대 효과
-            </p>
+            </h6>
           </div>
         </div>
       </div>
