--- a/project.html
+++ b/project.html
@@ -46,8 +46,10 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">For those about to rock...</h2>
-            <p class="project-text-1" style="color : #000">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">뷰티</h2>
+            <p class="project-text-1" style="color : #000">
+              
+            </p>
           </div>
         </div>
       </div>
@@ -64,8 +66,10 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We salute you!</h2>
-            <p class="project-text-2" style="color : #000">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">이너뷰티</h2>
+            <p class="project-text-2" style="color : #000">
+              
+            </p>
           </div>
         </div>
       </div>
@@ -82,8 +86,8 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Let there be rock!</h2>
-            <p class="project-text-3" style="color : #000">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">디바이스</h2>
+            <p class="project-text-3" style="color : #000">준비중</p>
           </div>
         </div>
       </div>
