--- a/index.html
+++ b/index.html
@@ -44,16 +44,6 @@
     </div>
 
     <div class="section portfolio-area" id="port">
-      <div class="wrapper">
-        <!-- <h2>Some Works of Mine</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> -->
-        <div class="btnBlock">
-          <div class="productBtn" onclick="openProduct()" > <span>자세히보기</span> </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="section services-area" id="service">
       <!-- Footer -->
       <div class="footer-wrapper">
         <div class="button-wrapper">
@@ -65,40 +55,25 @@
             <div class="footer-left" data-equalizer-watch>
               <div class="baseline">
                 <div class="contact-details">
-                  <h6>Contact details</h6>
-                  <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> 01234 567890</p>
-                  <p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact us</a></p>
-                  <p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Street, City, County, Country</p>
-                </div>
-                <div class="newsletter">
-                  <div class="input-group">
-                    <h6>Sign up for our newsletter</h6>
-                    <input class="input-group-field" type="email" placeholder="Email address">
-                  </div>
-                  <a class="button expanded" href="#">Submit</a>
+                  <h6>Genucell</h6>
+                  <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i>Copyright, Benucell All rights reserved</p>
                 </div>
               </div>
              </div>
             <div class="footer-center" data-equalizer-watch>
               <div class="baseline">
-                <div class="newsletter">
-                  <h6>Contact form</h6>
-                  <div class="input-group">
-                    <input class="input-group-field" type="text" placeholder="Name">
-                    <input class="input-group-field" type="email" placeholder="Email address">
-                    <textarea placeholder="Message"></textarea>
-                  </div>
-                  <a class="button expanded" href="#">Submit</a>
+                <div class="contact-details">
+                  <h6>Genucell</h6>
+                  <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i><br>|
+                    인천광역시 부평구 새갈로 57 (갈산동 454, 갈산동 대성유니드) <br>| 통신판매신고 2019-서울서초-1371호 <br>| Tel : 032-545-2187 <br>| Fax : 02-6280-6233
+                  </p>
                 </div>
               </div>
             </div>
             <div class="footer-right" data-equalizer-watch>
               <div class="baseline">
-                <img class="thumbnail" src="http://placehold.it/100">
-                <h6>Opening times</h6>
-                <p>Mon - Fri 9:00am - 5:00pm</p>
-                <p>Sat 9:00am - 8:00pm</p>
-                <p>Sun 9:00am - 4:00pm</p>
+                <h4>서비스 시간</h4>
+                <p>10:00am - 19:00pm</p>
                 <div class="social">
                   <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
                   <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
@@ -111,11 +86,14 @@
         </div>
       </div>
       <div class="wrapper">
-        <h2>These are my Services</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <!-- <h2>Some Works of Mine</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> -->
+        <div class="btnBlock">
+          <div class="productBtn" onclick="openProduct()" > <span>자세히보기</span> </div>
+        </div>
       </div>
-    </div>
 
+    </div>
   </div>
 
 
@@ -152,8 +130,8 @@
       $('#pagepiling').pagepiling({
         /*direction : 'horizontal',*/
         direction : 'vertical',
-        sectionsColor: ['#f2f2f2', '#fff', '#F9F9F9', '#03a0b0'],
-        anchors : ['home',  'about', 'port', 'service'],
+        sectionsColor: ['#f2f2f2', '#fff', '#F9F9F9'],
+        anchors : ['home',  'about', 'port'],
         easing: 'swing',
         loopBottom: false,
         loopTop: false,
@@ -164,7 +142,7 @@
           'textColor' : '#000',
           'bulletsColor' : '#000',
           'position' : 'right',
-          'tooltips' : ['Home', 'About', 'Portfolio', 'Services']
+          'tooltips' : ['Home', 'About', 'Portfolio']
         },
         normalScrollElements: null,
         keyboardScrolling: true,
