--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/product/01.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/product/02.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -67,7 +67,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/product/02.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/product/01.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -94,53 +94,38 @@
 	</div>
 
 	<div class="three-column-footer-contact-form-container">
-	  <footer class="three-column-footer-contact-form" data-equalizer data-equalize-by-row="true">
-	    <div class="footer-left" data-equalizer-watch>
-	      <div class="baseline">
-	        <div class="contact-details">
-	          <h6>Contact details</h6>
-	          <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> 01234 567890</p>
-	          <p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact us</a></p>
-	          <p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Street, City, County, Country</p>
-	        </div>
-	        <div class="newsletter">
-	          <div class="input-group">
-	            <h6>Sign up for our newsletter</h6>
-	            <input class="input-group-field" type="email" placeholder="Email address">
-	          </div>
-	          <a class="button expanded" href="#">Submit</a>
-	        </div>
-	      </div>
-	     </div>
-	    <div class="footer-center" data-equalizer-watch>
-	      <div class="baseline">
-	        <div class="newsletter">
-	          <h6>Contact form</h6>
-	          <div class="input-group">
-	            <input class="input-group-field" type="text" placeholder="Name">
-	            <input class="input-group-field" type="email" placeholder="Email address">
-	            <textarea placeholder="Message"></textarea>
-	          </div>
-	          <a class="button expanded" href="#">Submit</a>
-	        </div>
-	      </div>
-	    </div>
-	    <div class="footer-right" data-equalizer-watch>
-	      <div class="baseline">
-	        <img class="thumbnail" src="http://placehold.it/100">
-	        <h6>Opening times</h6>
-	        <p>Mon - Fri 9:00am - 5:00pm</p>
-	        <p>Sat 9:00am - 8:00pm</p>
-	        <p>Sun 9:00am - 4:00pm</p>
-	        <div class="social">
-	          <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-	          <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-	          <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
-	          <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-	        </div>
-	      </div>
-	    </div>
-	  </footer>
+    <footer class="three-column-footer-contact-form" data-equalizer data-equalize-by-row="true">
+      <div class="footer-left" data-equalizer-watch>
+        <div class="baseline">
+          <div class="contact-details">
+            <h6>Genucell</h6>
+            <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i>Copyright, Benucell All rights reserved</p>
+          </div>
+        </div>
+       </div>
+      <div class="footer-center" data-equalizer-watch>
+        <div class="baseline">
+          <div class="contact-details">
+            <h6>Genucell</h6>
+            <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i><br>|
+              인천광역시 부평구 새갈로 57 (갈산동 454, 갈산동 대성유니드) <br>| 통신판매신고 2019-서울서초-1371호 <br>| Tel : 032-545-2187 <br>| Fax : 02-6280-6233
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="footer-right" data-equalizer-watch>
+        <div class="baseline">
+          <h4>서비스 시간</h4>
+          <p>10:00am - 19:00pm</p>
+          <div class="social">
+            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
 	</div>
 	</div>
 
