--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
         <div class="overlay" id="myDiv">
           <a href="#" onclick="closeDiv()" class="close">&times;</a>
           <div class="content">
-            <a href="project.html">프로젝트</a>
             <a href="product.html">제품소개</a>
           </div>  
         </div>
-        <div class="benner-open" onclick="openDiv()" > Open </div>
+        <!-- <div class="benner-open" onclick="openDiv()" > Open </div> -->
       </div>
     </div>
 
@@ -43,7 +42,18 @@
       </div>
     </div>
 
-    <div class="section portfolio-area" id="port">
+  <div class="section portfolio-area" id="port">
+      <div class="wrapper">
+        <!-- <h2>Some Works of Mine</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> -->
+        <div class="btnBlock">
+          <div class="productBtn" onclick="openProduct()" > <span>자세히보기</span> </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section services-area" id="services">
       <!-- Footer -->
       <div class="footer-wrapper">
         <div class="button-wrapper">
@@ -55,6 +65,7 @@
             <div class="footer-left" data-equalizer-watch>
               <div class="baseline">
                 <div class="contact-details">
+                  <img src="img/logo_white.png" alt="">
                   <h6>Genucell</h6>
                   <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i>Copyright, Benucell All rights reserved</p>
                 </div>
@@ -86,13 +97,18 @@
         </div>
       </div>
       <div class="wrapper">
-        <!-- <h2>Some Works of Mine</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> -->
-        <div class="btnBlock">
-          <div class="productBtn" onclick="openProduct()" > <span>자세히보기</span> </div>
+        <div class="display-flex">
+          <div class="company-bg"></div>  
         </div>
+        
+        
+        <div class="display-body">
+            <h2 class="company-head-text">제너셀</h2>
+            <p class="company-text">
+              브랜드 가치를 이야기하며<br>최적의 타이밍과 최상의 상품을 만들어가는 제너셀
+            </p>  
+          </div>
       </div>
-
     </div>
   </div>
 
@@ -130,8 +146,8 @@
       $('#pagepiling').pagepiling({
         /*direction : 'horizontal',*/
         direction : 'vertical',
-        sectionsColor: ['#f2f2f2', '#fff', '#F9F9F9'],
-        anchors : ['home',  'about', 'port'],
+        sectionsColor: ['#f2f2f2', '#fff', '#F9F9F9', '#fff'],
+        anchors : ['home',  'about', 'port', 'services'],
         easing: 'swing',
         loopBottom: false,
         loopTop: false,
@@ -142,7 +158,7 @@
           'textColor' : '#000',
           'bulletsColor' : '#000',
           'position' : 'right',
-          'tooltips' : ['Home', 'About', 'Portfolio']
+          'tooltips' : ['Home', 'About', 'Portfolio', "Services"]
         },
         normalScrollElements: null,
         keyboardScrolling: true,
