--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <h2 class="slide_header">제너셀 <br>고백키트</h2>
           <span>추억 속으로 Go Back! <br />그 날의 당신을 기억하나요?</span>
         </div>
-        <div class="overlay" id="myDiv">
+        <!-- <div class="overlay" id="myDiv">
           <a href="#" onclick="closeDiv()" class="close">&times;</a>
           <div class="content">
             <a href="product.html">제품소개</a>
           </div>  
-        </div>
+        </div> -->
         <!-- <div class="benner-open" onclick="openDiv()" > Open </div> -->
       </div>
     </div>
@@ -65,7 +65,7 @@
             <div class="footer-left" data-equalizer-watch>
               <div class="baseline">
                 <div class="contact-details">
-                  <img src="img/logo_white.png" alt="">
+                  <img class="footer_logo" src="img/logo_white.png" alt="">
                   <h6>Genucell</h6>
                   <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i>Copyright, Benucell All rights reserved</p>
                 </div>
