--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
             <header id="header" class="header-wrapper home-parallax home-fade">
                 <div class="header-overlay"></div>
                 <div class="header-wrapper-inner">
-                    <div class="container">
-
+                    <div class="container" style="background : #dbbda6; width:100%; opacity: 0.7; z-index: -9999;">
                         <div class="welcome-speech">
-                            <h1>GENUCELL</h1>
-                            <p>브랜드 가치를 이야기하며 최적의 타이밍과 최상의 상품을 만들어가는 제너셀</p>
+                            <h1 style="color : #fff; font-weight: 700; z-index: 9999;">GENUCELL</h1>
+                            <p style="color : #fff; z-index: 9999;">브랜드 가치를 이야기하며 최적의 타이밍과 최상의 상품을 만들어가는 제너셀</p>
                             <!-- <a href="#" class="btn btn-white">
                                 Our Works
                             </a> -->
@@ -665,7 +664,8 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-umbrella"></i>
+                                                <!-- <i class="fa fa-umbrella"></i> -->
+                                                <img src="assets/img/icon/1.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
@@ -681,7 +681,7 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-thumbs-up"></i>
+                                                <img src="assets/img/icon/2.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
@@ -697,7 +697,8 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-bug"></i>
+                                                <!-- <i class="fa fa-bug"></i> -->
+                                                <img src="assets/img/icon/3.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
@@ -713,7 +714,8 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-cloud-download"></i>
+                                                <!-- <i class="fa fa-cloud-download"></i> -->
+                                                <img src="assets/img/icon/4.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
@@ -729,7 +731,8 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-tachometer"></i>
+                                                <!-- <i class="fa fa-tachometer"></i> -->
+                                                <img src="assets/img/icon/5.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
@@ -745,7 +748,8 @@
                                     <div class="service-content text-center">
                                         <div class="service-icon-box">
                                             <div class="service-icon center-block">
-                                                <i class="fa fa-briefcase"></i>
+                                                <!-- <i class="fa fa-briefcase"></i> -->
+                                                <img src="assets/img/icon/6.png" alt="" style="width:100%; height: 100%;">
                                             </div>
                                         </div> <!--  end of .service-icon-box  -->
                                         <div class="service-info">
