6/12 두번째 커밋

--- a/index.html
+++ b/index.html
@@ -174,28 +174,34 @@
                 <!--  end of intro section -->
 
 
-                <section class="bg-white story">
+                <!-- 회사소개 페이지 -->
+                <section class="bg-white designation">
                     <div class="container">
-                        <div class="headline text-center">
-                            <div class="row">
-                                <div class="col-md-6 col-md-offset-3">
-                                    <h2 class="section-title">our story</h2>
+
+                        <!-- <div class="headline text-center">
+                             <div class="row">
+                                 <div class="col-md-6 col-md-offset-3">
+                                     <h2 class="section-title" style="font-weight: 450;">고백 패키지</h2>
+                                 </div>
+                             </div>
+                         </div> --> <!-- /.headline -->
+                         <div class="team-list" id="product1">
+                            <div class="container">
+                                <div class="row">
+                                    <img src="assets/img/company_about/1.png" class="center-block" style="background-size: cover; width : 100%;">
                                 </div>
                             </div>
-                        </div> <!-- /.headline -->
-
-                        <div class="row">
-                            <div class="col-md-10 col-md-offset-1 text-center">
-                                <img src="assets/img/company_about/1.png" alt="">
-                                <img src="assets/img/company_about/2.png" alt="">
-                                <!-- <p class="story-description">
-                                    
-                                </p> /.story-description -->
+                        </div> <!-- end of /.team-list -->
+                        <div class="team-list" id="product2">
+                            <div class="container">
+                                <div class="row">
+                                    <img src="assets/img/company_about/2.png" class="center-block" style="background-size: cover; width : 100%;">
+                                </div>
                             </div>
-                        </div>
+                        </div> <!-- end of /.team-list -->
                     </div>
                 </section>
-                <!-- end of our story section -->
+                 <!-- end of designation section -->
 
                 <div class="container">
 
